--- a/Bonus.ipynb
+++ b/Bonus.ipynb
@@ -231,9 +231,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1.   Tuple ile listenin farkı nedir?\n",
-        "2.   Overfitting'e düştüğünüzü nasıl anlarsınız?\n",
-        "3.   Bagging boosting arasındaki fark nedir?\n",
+        "4)   Tuple ile listenin farkı nedir?\n",
+        "Tuple ile listenin farkı tuple değiştirilemez ekleyip eleman silinemez. Liste ise değişir. Değiştirilmesi gereken yerde tuple kullanılır."
+        "5)   Overfitting'e düştüğünüzü nasıl anlarsınız?\n",
+        "6)   Bagging boosting arasındaki fark nedir?\n",
+        "Bagging yöntemlerine ağaçların birbirine bağımlılıkları vardır. Boosting yöntemlerinde ağaçlar artıklar üzerine kurulur."
         "\n",
         "\n",
         "\n",
